Back to former build file